--- a/Project/j6Store/src/main/resources/application.properties
+++ b/Project/j6Store/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=j6Store
+
+spring.datasource.url= jdbc:sqlserver://localhost:1433;encrypt=true;trustServerCertificate=true;databaseName=J6store
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
